--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             </nav>
          <!--Контакти -->
             <ul class="head-contacts list-style">
-                <li class="item">
-                    <a href="mailto:info@devstudio.com" class="link">
-                        <svg class="icon-contact" width="16" height="12"> 
+                <li class="contact-item">
+                    <a href="mailto:info@devstudio.com" class="contact-link link">
+                        <svg class="icon-contact"  width="16" height="12"> 
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                     info@devstudio.com
                     </a>
                 </li>
-                <li class="item">
-                    <a href="tel:+380961111111" class="link">
+                <li class="contact-item">
+                    <a href="tel:+380961111111" class="contact-link link">
                         <svg class="icon-contact" width="10" height="16"> 
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
@@ -58,7 +58,7 @@
                 <ul class="feature-list list-style">
                     <li class="item">
                         <div class="icon-block">
-                            <svg class="icon-feature" widh="70px" height="70px">
+                            <svg class="icon-feature" widh="70" height="70">
                             <use href="./images/icons.svg#antenna"></use>
                             </svg>
                         </div>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="item">
                         <div class="icon-block">
-                            <svg class="icon-feature" widh="70px" height="70px">
+                            <svg class="icon-feature" widh="70" height="70">
                             <use href="./images/icons.svg#clock"></use>
                             </svg>
                         </div>
@@ -76,7 +76,7 @@
                     </li>
                     <li class="item">
                         <div class="icon-block">
-                            <svg class="icon-feature" widh="70px" height="70px">
+                            <svg class="icon-feature" widh="70" height="70">
                             <use href="./images/icons.svg#diagram"></use>
                             </svg>
                         </div>
@@ -85,7 +85,7 @@
                     </li>
                     <li class="item">
                         <div class="icon-block">
-                            <svg class="icon-feature" widh="70px" height="70px">
+                            <svg class="icon-feature" widh="70" height="70">
                             <use href="./images/icons.svg#astronaut"></use>
                             </svg>
                         </div>
@@ -125,28 +125,28 @@
                             <ul class="team-soc-list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -162,28 +162,28 @@
                             <ul class="team-soc-list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -199,28 +199,28 @@
                             <ul class="team-soc-list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -236,28 +236,28 @@
                             <ul class="team-soc-list">
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link">
-                                        <svg class="team-soc-icon" width="20px" height="20px">
+                                        <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -272,38 +272,50 @@
         <section class="clients">
             <div class="container">
             <h2 class="section-title">Постійні клієнти</h2>
-                 <ul class="clients-list list-style">
-                    <li class="item-client">
-                        <svg class="icon-client" width="170" height="92"> 
+            <ul class="clients-list">
+                <li class="client-item">
+                    <a href="" class="client-link">
+                        <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons.svg#client1"></use>
                         </svg>
-                    </li>
-                    <li class="item-client">
-                        <svg class="icon-client" width="170" height="92"> 
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="" class="client-link">
+                        <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons.svg#client2"></use>
                         </svg>
-                    </li>
-                    <li class="item-client">
-                        <svg class="icon-client" width="170" height="92"> 
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="" class="client-link">
+                        <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons.svg#client3"></use>
                         </svg>
-                    </li>
-                    <li class="item-client">
-                        <svg class="icon-client" width="170" height="92"> 
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="" class="client-link">
+                        <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons.svg#client4"></use>
                         </svg>
-                    </li>
-                    <li class="item-client">
-                        <svg class="icon-client" width="170" height="92"> 
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="" class="client-link">
+                        <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons.svg#client5"></use>
                         </svg>
-                    </li>
-                    <li class="item-client">
-                        <svg class="icon-client" width="170" height="92"> 
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a href="" class="client-link">
+                        <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons.svg#client6"></use>
                         </svg>
-                    </li>
-                </ul>
+                    </a>
+                </li>
+            </ul>
             </div>
         </section> 
 
