--- a/portfolio.html
+++ b/portfolio.html
@@ -24,24 +24,24 @@
               </ul>
             </nav>
          <!--Контакти -->
-            <ul class="head-contacts list-style">
-                <li class="item">
-                    <a href="mailto:info@devstudio.com" class="link">
-                        <svg class="icon-contact" width="16" height="12"> 
-                            <use href="./images/icons.svg#icon-envelope"></use>
-                        </svg>
-                    info@devstudio.com
-                    </a>
-                </li>
-                <li class="item">
-                    <a href="tel:+380961111111" class="link">
-                        <svg class="icon-contact" width="10" height="16"> 
-                            <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg>
-                     +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
+         <ul class="head-contacts list-style">
+            <li class="contact-item">
+                <a href="mailto:info@devstudio.com" class="contact-link link">
+                    <svg class="icon-contact"  width="16" height="12"> 
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                info@devstudio.com
+                </a>
+            </li>
+            <li class="contact-item">
+                <a href="tel:+380961111111" class="contact-link link">
+                    <svg class="icon-contact" width="10" height="16"> 
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                 +38 096 111 11 11
+                </a>
+            </li>
+        </ul>
         </div>
     </header>
     
